--- a/index.html
+++ b/index.html
@@ -1,8 +1,47 @@
-echo "<!DOCTYPE html>
-<html>
-<head><title>Boom Node</title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boom Node</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
+</head>
 <body>
-<h1>Welcome to Boom Node</h1>
-<p>This is the official GitHub Pages site for Boom Node.</p>
+    <header>
+        <h1>Welcome to Boom Node</h1>
+        <p>This is the official GitHub Pages site for Boom Node.</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#roadmap">Roadmap</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="about">
+        <h2>About Boom Node</h2>
+        <p>Boom Node is a powerful blockchain solution designed for developers and enterprises.</p>
+    </section>
+
+    <section id="roadmap">
+        <h2>Roadmap</h2>
+        <ul>
+            <li><strong>Q1 2025:</strong> Launch of Boom Node</li>
+            <li><strong>Q2 2025:</strong> DeFi integrations</li>
+            <li><strong>Q3 2025:</strong> Governance and staking</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Follow us on Twitter: <a href="https://x.com/boomtokn?s=21" target="_blank">@BoomTokn</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Boom Node. All Rights Reserved.</p>
+    </footer>
 </body>
-</html>" > index.html
+</html>
